# Ray-Tracing

./: .gitignore  CMakeLists.txt  CMake_Run.cmd  README.md  Run.cmd
include/: camera.h  color.h  geometry.h  model.h  objloader.h  project.h  raytracer.h  scene.h  surface.h  triangle.h  utils.h
models/: pear.mtl
src/: CMakeLists.txt  camera.c  color.c  geometry.c  main.c  model.c  objloader.c  raytracer.c  scene.c  surface.c  triangle.c  utils.c
